🚀🐡 Checkpoint ./style.css:22573955/393 ./index.html:22573955/37

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 
 <body>
-    <h1>Resume</h1>
+    <h1>Jaye Lin Resume</h1>
     <div class="contact">
-        <h2>Jaimee Lin</h2>
         <a href="Illusxia. carbonmade.com"> Portfolio </a><br>
         <a href="Xiaoxxia23@Gmail.com"> Email </a><br>
         Baltimore, MD</p>
