🐪🗃 Checkpoint ./style.css:22573955/482 ./index.html:22573955/340

--- a/index.html
+++ b/index.html
@@ -5,20 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>
+      Document
+  </title>
 </head>
 
 <body>
-    <h1>Jaye Lin Resume</h1>
+    <h1>
+      Jaye Lin Resume 
+  </h1>
     <div class="contact">
-        <a href="Illusxia. carbonmade.com"> Portfolio </a><br>
-        <a href="Xiaoxxia23@Gmail.com"> Email </a><br>
-        Baltimore, MD</p>
+        <a href="Illusxia. carbonmade.com"> 
+          Portfolio 
+      </a>
+      <br>
+        <p>
+          <a href="Xiaoxxia23@Gmail.com"> 
+            Email 
+          </a>
+          <br>
+        Baltimore, MD
+      </p>
     </div>
 
     <div class="edu">
-        <h3>Education And Training:</h3>
-        <p> <b>Maryland Institute Of Art And Design</b><br>
+        <h3>
+          Education And Training:
+      </h3>
+        <p> 
+          <b>Maryland Institute Of Art And Design</b><br>
             <i>(2019-Current)</i><br>
             Bachelor of graphic design</p>
 
@@ -62,11 +77,9 @@
             I helped found the transfer student union and organize events along with the president.</p>
     </div>
 
-    <div class-"objectives">
-        <p>
-            <h3>Career Objectives</h3>
-            A graphic design internship that will help expand my skills and views on the design world
-        </p>
+    <div class="objectives">
+        <h3>Career Objectives</h3>
+      <p>A graphic design internship that will help expand my skills and views on the design world </p>
     </div>
 
     <div class="expert">
@@ -79,10 +92,9 @@
     </div>
 
     <div class="int">
-        <p>
+        
             <h3>Interests</h3>
-            Book Binding, Watercolor, Cooking, Cafe Hopping, Experiemtnal Coding,
-            Dungeons And Dragons, True Crime, Psychology And Sociology Theory And Finding New Places To Eat, Podcasts
+           <p> Book Binding, Watercolor, Cooking, Cafe Hopping, Experiemtnal Coding,Dungeons And Dragons, True Crime, Psychology And Sociology Theory And Finding New Places To Eat, Podcasts
         </p>
     </div>
 
