--- a/index.html
+++ b/index.html
@@ -2,102 +2,123 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>
-      Document
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>
+    Document
   </title>
 </head>
 
 <body>
-    <h1>
-      Jaye Lin Resume 
+  <h1>
+    Jaye Lin Resume
   </h1>
-    <div class="contact">
-        <a href="Illusxia. carbonmade.com"> 
-          Portfolio 
+  <div class="contact">
+    <a href="Illusxia. carbonmade.com"> Portfolio
+    </a>
+    <p>
+      <a href="Xiaoxxia23@Gmail.com">
+        Email
       </a>
-      <br>
-        <p>
-          <a href="Xiaoxxia23@Gmail.com"> 
-            Email 
-          </a>
-          <br>
-        Baltimore, MD
-      </p>
-    </div>
+      <br />
+      Baltimore, MD
+    </p>
+  </div>
 
-    <div class="edu">
-        <h3>
-          Education And Training:
-      </h3>
-        <p> 
-          <b>Maryland Institute Of Art And Design</b><br>
-            <i>(2019-Current)</i><br>
-            Bachelor of graphic design</p>
+  <div class="edu">
+    <h3>
+      Education And Training:
+    </h3>
+    <p>
+      <b>Maryland Institute Of Art And Design</b>
+      <br/>
+      <i>(2019-Current)</i><br />
+      Bachelor of graphic design
+    </p>
 
-        <p><b>University Of Minnesota- Twin Cities</b><br>
-            <i>(2014-2018)</i><br>
-            Bachelors of fine arts<br>
-            Deans list</p>
+    <p>
+      <b>University Of Minnesota- Twin Cities</b><br />
+      <i>(2014-2018)</i><br />
+      Bachelors of fine arts<br />
+      Deans list
+    </p>
 
-        <p><b> Animation mentor</b><br>
-            <i>(2018)</i><br>
-            Character animation</p>
-    </div>
+    <p>
+      <b> Animation mentor</b><br />
+      <i>(2018)</i><br />
+      Character animation
+    </p>
+  </div>
 
+  <div class="exp">
+    <h3>Work Experience</h3>
 
-    <div class="exp">
-        <h3>Work Experience</h3>
+    <p>
+      <b>Freelance Illustrator And Designer</b><br />
+      <i>2015 – Current</i><br />
+      Took individual commissions and maintained a receptive stream of
+      conversation with the client and adapted to their needs promptly. Kept
+      the process organized and delivered the product in a timely manner.
+    </p>
 
-        <p> <b>Freelance Illustrator And Designer</b><br>
-            <i>2015 – Current</i><br>
-            Took individual commissions and maintained a receptive stream of conversation with the client and adapted to
-            their needs promptly. Kept the process organized and delivered the product in a timely manner.</p>
+    <p>
+      <b> Primsa Collective Co-Founder</b><br />
+      <i>2019-Current</i><br />
+      Organized and started a web development company. Working in tandem with
+      other designers from all walks of life to create fresh and unique
+      websites and brands.
+    </p>
 
-        <p> <b> Primsa Collective Co-Founder</b><br>
-            <i>2019-Current</i><br>
-            Organized and started a web development company. Working in tandem with other designers from all walks of
-            life to create fresh and unique websites and brands.</p>
+    <p>
+      <b> Head Animator</b><br />
+      <i>June 2017 – August 2017</i><br />
+      Created the animation for the third scene and directed assistant
+      animators while coordinating specific revisions from director feedback
+    </p>
 
-        <p><b> Head Animator</b><br>
-            <i>June 2017 – August 2017</i><br>
-            Created the animation for the third scene and directed assistant animators while coordinating specific
-            revisions from director feedback</p>
+    <p>
+      <b>Volunteer Illustrator</b><br />
+      <i>2017 – May 2017</i><br />
+      Offered my assistance in designing article-specific illustrations for
+      the wake, an university of minnesota school paper. Submitted pieces by
+      deadline and refined final product by incorporating feedback and
+      critique in revisions to meet the ad demands
+    </p>
 
-        <p><b>Volunteer Illustrator</b><br>
-            <i>2017 – May 2017</i><br>
-            Offered my assistance in designing article-specific illustrations for the wake, an university of minnesota
-            school paper. Submitted pieces by deadline and refined final product by incorporating feedback and critique
-            in revisions to meet the ad demands</p>
+    <p>
+      <b>Transfer Student Union Vice-President </b><br />
+      <i>2019-Current</i><br />
+      I helped found the transfer student union and organize events along with
+      the president.
+    </p>
+  </div>
 
-        <p><b>Transfer Student Union Vice-President </b><br>
-            <i>2019-Current</i><br>
-            I helped found the transfer student union and organize events along with the president.</p>
-    </div>
+  <div class="objectives">
+    <h3>Career Objectives</h3>
+    <p>
+      A graphic design internship that will help expand my skills and views on
+      the design world
+    </p>
+  </div>
 
-    <div class="objectives">
-        <h3>Career Objectives</h3>
-      <p>A graphic design internship that will help expand my skills and views on the design world </p>
-    </div>
+  <div class="expert">
+    <h3>Expertise</h3>
+    <b>Coding</b>: Css, Html<br />
+    <b>Programs</b>: Rhino, Maya, Photoshop, After Effects, Indesign,
+    Illustrator<br />
+    <b>Skills</b>: Sketching, Illustration, Drafting, Character Design,
+    Visual/World Development
+  </div>
 
-    <div class="expert">
-
-        <h3>Expertise</h3>
-        <b>Coding</b>: Css, Html<br>
-        <b>Programs</b>: Rhino, Maya, Photoshop, After Effects, Indesign, Illustrator<br>
-        <b>Skills</b>: Sketching, Illustration, Drafting, Character Design, Visual/World Development
-
-    </div>
-
-    <div class="int">
-        
-            <h3>Interests</h3>
-           <p> Book Binding, Watercolor, Cooking, Cafe Hopping, Experiemtnal Coding,Dungeons And Dragons, True Crime, Psychology And Sociology Theory And Finding New Places To Eat, Podcasts
-        </p>
-    </div>
-
+  <div class="int">
+    <h3>Interests</h3>
+    <p>
+      Book Binding, Watercolor, Cooking, Cafe Hopping, Experiemtnal
+      Coding,Dungeons And Dragons, True Crime, Psychology And Sociology Theory
+      And Finding New Places To Eat, Podcasts
+    </p>
+  </div>
 </body>
 
 </html>
