🍯🚣 Checkpoint ./index.html:22573955/1129 ./style.css:22573955/508

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </h3>
     <p>
       <b>Maryland Institute Of Art And Design</b>
-      <br/>
+      <br />
       <i>(2019-Current)</i><br />
       Bachelor of graphic design
     </p>
@@ -51,7 +51,25 @@
     </p>
   </div>
 
-  <div class="exp"> 
+  <div class="expert">
+    <h3>Expertise</h3>
+    <b>Coding</b>: Css, Html<br />
+    <b>Programs</b>: Rhino, Maya, Photoshop, After Effects, Indesign,
+    Illustrator<br />
+    <b>Skills</b>: Sketching, Illustration, Drafting, Character Design,
+    Visual/World Development
+  </div>
+
+  <div class="int">
+    <h3>Interests</h3>
+    <p>
+      Book Binding, Watercolor, Cooking, Cafe Hopping, Experiemtnal
+      Coding,Dungeons And Dragons, True Crime, Psychology And Sociology Theory
+      And Finding New Places To Eat, Podcasts
+    </p>
+  </div>
+
+  <div class="exp">
     <h3>Work Experience</h3>
 
     <p>
@@ -94,31 +112,15 @@
     </p>
   </div>
 
-  <div class="objectives">
+  <!-- <div class="objectives">
     <h3>Career Objectives</h3>
     <p>
       A graphic design internship that will help expand my skills and views on
       the design world
     </p>
-  </div>
+  </div> -->
 
-  <div class="expert">
-    <h3>Expertise</h3>
-    <b>Coding</b>: Css, Html<br />
-    <b>Programs</b>: Rhino, Maya, Photoshop, After Effects, Indesign,
-    Illustrator<br />
-    <b>Skills</b>: Sketching, Illustration, Drafting, Character Design,
-    Visual/World Development
-  </div>
 
-  <div class="int">
-    <h3>Interests</h3>
-    <p>
-      Book Binding, Watercolor, Cooking, Cafe Hopping, Experiemtnal
-      Coding,Dungeons And Dragons, True Crime, Psychology And Sociology Theory
-      And Finding New Places To Eat, Podcasts
-    </p>
-  </div>
 </body>
 
 </html>
