⛷🚏 Checkpoint ./style.css:22573955/162 ./index.html:22573955/29

--- a/index.html
+++ b/index.html
@@ -11,17 +11,11 @@
 </head>
 
 <body>
-  <h1>
-    Jaye Lin Resume
-  </h1>
+  <h1> Jaye Lin Resume </h1>
   <div class="contact">
-    <a href="Illusxia. carbonmade.com"> Portfolio
-    </a>
+    <a href="Illusxia. carbonmade.com"> Portfolio </a>
     <p>
-      <a href="Xiaoxxia23@Gmail.com">
-        Email
-      </a>
-      <br />
+      <a href="Xiaoxxia23@Gmail.com"> Email </a>      <br />
       Baltimore, MD
     </p>
   </div>
