🚌👋 Checkpoint ./index.html:22573955/107 ./style.css:22573955/536

--- a/index.html
+++ b/index.html
@@ -13,17 +13,15 @@
 <body>
   <h1> Jaye Lin Resume </h1>
   <div class="contact">
-    <a href="Illusxia. carbonmade.com"> Portfolio </a>
-    <p>
-      <a href="Xiaoxxia23@Gmail.com"> Email </a>      <br />
+    <p> <a href="Illusxia. carbonmade.com"> Portfolio </a><br>
+
+      <a href="Xiaoxxia23@Gmail.com"> Email </a> <br>
       Baltimore, MD
     </p>
   </div>
 
   <div class="edu">
-    <h3>
-      Education And Training:
-    </h3>
+    <h3> Education And Training: </h3>
     <p>
       <b>Maryland Institute Of Art And Design</b>
       <br />
@@ -46,12 +44,14 @@
   </div>
 
   <div class="expert">
+
     <h3>Expertise</h3>
-    <b>Coding</b>: Css, Html<br />
-    <b>Programs</b>: Rhino, Maya, Photoshop, After Effects, Indesign,
-    Illustrator<br />
-    <b>Skills</b>: Sketching, Illustration, Drafting, Character Design,
-    Visual/World Development
+    <p><b>Coding</b>: Css, Html<br />
+      <b>Programs</b>: Rhino, Maya, Photoshop, After Effects, Indesign,
+      Illustrator<br />
+      <b>Skills</b>: Sketching, Illustration, Drafting, Character Design,
+      Visual/World Development
+    </p>
   </div>
 
   <div class="int">
